# stock_analyzer_1

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  a1  main.py  pyproject.toml  streamlit_app.py
.claude/: mcp.json
.playwright-mcp/: page-2026-04-08T07-45-04-052Z.yml  page-2026-04-10T19-20-03-814Z.yml  page-2026-04-11T03-39-37-859Z.yml  page-2026-04-11T10-45-10-969Z.yml  page-2026-04-11T10-45-31-555Z.yml
app/: main.py
app/agents/: peers_agent.py  recommendation_agent.py
app/models/: schemas.py
app/services/: metrics_cache.py  scoring_service.py  stock_service.py  yahoo_scraper.py
app/ui/: nav.py  state.py
app/ui/screens/: step1_select.py  step2_peers.py  step3_metrics.py  step4_ranking.py
docs/superpowers/plans/: 2026-04-10-finance-stock-comparison.md  2026-04-11-huggingface-docker-deploy.md  2026-04-11-scrape-yahoo-key-statistics.md
docs/superpowers/specs/: 2026-04-10-finance-stock-comparison-design.md  2026-04-11-huggingface-docker-deploy-design.md  2026-04-11-scrape-yahoo-key-statistics-design.md
tests/: test_peers_agent.py  test_recommendation_agent.py  test_schemas.py  test_scoring_derived.py  test_scoring_service.py  test_stock_service.py  test_yahoo_scraper_converters.py  test_yahoo_scraper_fetch.py  test_yahoo_scraper_parse.py
tests/fixtures/: lulu_key_statistics.html
