[project]
name = "stock-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.5.14",
    "fastapi>=0.135.3",
    "pytest>=9.0.3",
    "ruff>=0.15.9",
    "uvicorn>=0.44.0",
    "streamlit>=1.40.0",
    "yfinance>=0.2.50",
    "pydantic>=2.0.0",
]
